Remove scripting permission

--- a/manifest.json
+++ b/manifest.json
@@ -21,9 +21,7 @@
             ]
         }
     ],
-    "permissions": [
-        "scripting"
-    ],
+    "permissions": [],
     "web_accessible_resources": [
         {
             "resources": [
